# advisor-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
docs/: claude-desktop-config.json.example  covered-call-strategy.md  pattern-lab-iteration-log.md
guide/: 00-getting-started.md  01-contacts.md  02-tasks.md  03-search-filter.md  04-list-views.md  05-reports.md  CLAUDE.md  README.md  setup-claude-desktop.md
migrations/: 001_init.sql  002_research.sql  003_market_data.sql  004_decision_engine.sql  006_architecture_cleanup.sql  007_pattern_lab.sql  008_covered_call.sql  009_option_cache.sql  010_pattern_alerts.sql  README.md
specs/001-project-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-scaffolding/checklists/: requirements.md
specs/001-project-scaffolding/contracts/: cli.md
specs/002-research-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-research-ingestion/checklists/: requirements.md
specs/002-research-ingestion/contracts/: cli.md
specs/003-market-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-market-data/checklists/: requirements.md
specs/003-market-data/contracts/: cli.md
specs/004-decision-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-decision-engine/checklists/: requirements.md
specs/004-decision-engine/contracts/: cli.md
specs/006-architecture-research/: architecture-proposal.md  direction.md  findings.md  migration-notes.md  research-plan.md
specs/007-architecture-cleanup/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/007-architecture-cleanup/checklists/: requirements.md
specs/008-system-architecture/: data-model.md  decisions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-system-architecture/checklists/: requirements.md
specs/009-finnhub-earningscall-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-mcp-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-pattern-lab/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-covered-call-strategy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-pharma-news-dip/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-pattern-lab-extensions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-mcp-pattern-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-real-options-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-live-pattern-alerts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-track1-dashboard-perf/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-sfdc-sandbox/: data-model.md  plan.md  quickstart.md  research.md  sfdc-setup-guide.md  spec.md  tasks.md
specs/020-client-list-builder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-sfdc-native-lists/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-sfdc-task-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-railway-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-sfdc-learning-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/finance_agent/: __init__.py  cli.py  config.py  db.py
tests/: conftest.py
tests/integration/: test_ab_test_cli.py  test_earningscall.py  test_engine.py  test_finnhub.py  test_health.py  test_market_data.py  test_mcp_integration.py  test_news_dip_cli.py  test_research_pipeline.py  test_sec_edgar.py
tests/unit/: test_alert_storage.py  test_analyzer.py  test_audit.py  test_cli_sandbox_tasks.py  test_config.py  test_dashboard.py  test_db.py  test_engine.py  test_event_detection.py  test_export.py  test_list_builder.py  test_market.py  test_mcp_pattern_tools.py  test_mcp_server.py  test_models.py  test_option_data.py  test_regime.py  test_safety.py  test_sandbox_briefs.py  test_sandbox_seed.py  test_sandbox_storage.py  test_scan_schedule.py  test_scanner.py  test_sfdc_listview.py  test_sfdc_report.py  test_sfdc_tasks.py  test_signals.py  test_sources.py  test_stats.py  test_watchlist.py
(+100 files in other folders)
