[project]
name = "advisor-agent"
version = "0.1.0"
description = "AI-powered productivity and research tools for financial advisors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43",
    "anthropic>=0.45",
    "beautifulsoup4>=4.12",
    "earningscall>=1.4",
    "edgartools>=5.16",
    "feedparser>=6.0",
    "finnhub-python>=2.4",
    "httpx",
    "fastmcp>=2.14,<3",
    "pydantic>=2.0",
    "pytz>=2025.2",
    "scipy>=1.12",
    "simple-salesforce>=1.12.9",
]

[project.scripts]
finance-agent = "finance_agent.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["edgar.*", "edgar", "earningscall.*", "earningscall", "finnhub.*", "finnhub", "feedparser.*", "feedparser", "fastmcp.*", "fastmcp"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "finance_agent.mcp.research_server"
disable_error_code = ["misc", "no-untyped-def"]
allow_untyped_decorators = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
